src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Global Product Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hospital_Standard_Price__c</fullName>
        <label>Hospital Standard Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limit_KAM_deposit_obligatory__c</fullName>
        <label>Limit KAM (deposit obligatory)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Local Product Code</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PZN__c</fullName>
        <externalId>true</externalId>
        <label>PZN</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Campto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combactam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyklokapron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diflucan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragmin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ketanest S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minprostin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tazobac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trevilor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unacid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valoron N SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zavedos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Group__c</columns>
        <columns>PZN__c</columns>
        <columns>Local_Product_Code__c</columns>
        <columns>Global_Product_Code__c</columns>
        <columns>Hospital_Standard_Price__c</columns>
        <columns>Limit_KAM_deposit_obligatory__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>DE_Product</fullName>
        <active>true</active>
        <label>DE Product</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>